k8sfiles/chess-back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: chess-back
  name: chess-back
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chess-back
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/my-network: "true"
        io.kompose.service: chess-back
    spec:
      containers:
        - image: mykolacompany/chess-back
          name: chess-back
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
