k8sfiles/chess-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: chess-front
  name: chess-front
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chess-front
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/my-network: "true"
        io.kompose.service: chess-front
    spec:
      containers:
        - env:
            - name: API_URL
              value: http://locol/
          image: mykolacompany/chess-front:v1
          name: chess-front
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
