k8sfiles/chess-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-back-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chess-back
  template:
    metadata:
      labels:
        app: chess-back
    spec:
      containers:
        - name: chess-back
          image: mykolacompany/chess-back
          ports:
            - containerPort: 8081
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: chess-back-servise
spec:
  selector:
    app: chess-back
  ports:
    - port: 8081
      targetPort: 8081
  type: LoadBalancer
