k8sfiles/chess-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chess-front
  template:
    metadata:
      labels:
        app: chess-front
    spec:
      containers:
        - name: chess-front
          image: mykolacompany/chess-front
          ports:
            - containerPort: 80
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: chess-front-servise
spec:
  selector:
    app: chess-front
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
