k8sfiles/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - http:
      paths:
        - backend:
           serviceName: chess-front
           servicePort: 8080
  - http:
      paths:
        - backend:
           serviceName: chess-back
           servicePort: 8081
